--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+mat-card-content {
+  text-align: center;
+}
+mat-card-header {
+  justify-content: center;
+  margin-right: 0px;
+}
+
+mat-card-actions {
+  text-align: center;
+}
